Tue Jun 13 20:17:16 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/common.h src/server/unittest.c:
	- small fixes for cross mingw

Tue Jun 13 14:38:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/prepclose.c(added) configure.ac:
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	- add test to test error closing connection on SQLPrepare

Mon Jun 12 22:02:57 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* m4/sprintf_i64_format.m4: fix for cross mingw32

Mon Jun 12 21:52:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/sql2tds.c: fix for possible uninitialized variable

Mon Jun 12 21:48:15 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/apps/datacopy.c src/apps/freebcp.c src/apps/freebcp.h:
	* src/pool/main.c src/pool/pool.h:
	- fix some issues cross compiling for mingw32

Mon Jun 12 16:55:59 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/data.c: add test for date to char

Fri Jun  9 14:33:31 EDT 2006	Nick Castellano <entropy@freetds.org>
	* src/apps/tsql.c: inhibit readline tab completion in tsql

Fri Jun 09 11:50:55 EDT 2006	Nick Castellano <entropy@freetds.org>
	* locales.conf: use same date format as Sybase in default and en_US

Thu Jun 08 10:18:50 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/unittests/t0007.c:
	- improved to detect possible date problems

Wed Jun 07 14:37:56 EDT 2006	Nick Castellano <entropy@freetds.org>
	* src/tds/convert.c: correctly convert dates in January

Tue Jun 06 12:02:10 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.ac src/tds/config.c:
	- fix tsql -C for sybase compatibility

Tue Jun 06 11:32:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/mem.c: use calloc instead of malloc/memset

Mon Jun 05 13:42:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/ct.c src/tds/token.c:
	- style and cleanup
