@@ -1,3 +1,8 @@
+Wed Jun 14 13:26:42 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
+	* include/tds_sysdep_private.h src/apps/Makefile.am:
+	- fix for cross mingw32
+	* src/odbc/unittests/describecol.c: report more clearly problems
+
 Tue Jun 13 20:17:16 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
 	* src/odbc/unittests/common.h src/server/unittest.c:
 	- small fixes for cross mingw
